# biomedical-agent-teams-codex-marketplace

./: .gitattributes  README.md  SECURITY.md  bmat_improvement_review_and_execution_roadmap_2026-07-13.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugins/biomedical-agent-teams/: README.md  README.quickstart.md
plugins/biomedical-agent-teams/.codex-plugin/: plugin.json
plugins/biomedical-agent-teams/skills/biomedical-agent-teams/: README.md  SKILL.md  agent-registry.json  manifest.json  source-manifest.json
plugins/biomedical-agent-teams/skills/biomedical-agent-teams/agents/: bayesian-decision-modeler.md  biostats-repro-auditor.md  bulk-deg-analyst.md  causal-inference-confounder-analyst.md  central-claim-ledger-evidence-graph.md  citation-verifier.md  claim-level-evidence-verifier.md  clinical-trial-operations-scout.md  contradiction-red-team.md  entity-normalizer.md  experimental-design-planner.md  figure-schematic-director.md  grant-ip-landscape-scout.md  hypothesis-generator.md  hypothesis-ranker.md  immunology-mechanism-critic.md  life-science-lead-scientist.md  life-science-literature-curator.md  model-card-dataset-card-writer.md  omics-code-reviewer.md  omics-data-curator.md  omics-provenance-validator.md  omics-reporter.md  pathway-interpreter.md  post-write-final-validator.md  protocol-context-locker.md  protocol-reagent-logistics-planner.md  provenance-traceability-architect.md  public-omics-analyst.md  risk-of-bias-study-quality-auditor.md  scenario-playbook-router.md  (+4 more)
tests/: test_bmat_package.py
(+56 files in other folders)
